2009-01-14  Steffen Macke <sdteffen@sdteffen.de>

	* installer/win32/dia.nsi: Some updates for GTK 2.14.7
	* app/interface.c: Include gtkhwrapbox.h in order to compile with MSVC

2009-01-12  Hans Breuer  <hans@breuer.org>

	* app/sheets_dialog_callbacks.c : don't leak a superfluous SheetObject
	fixes bug #564677

2009-01-11  Hans Breuer  <hans@breuer.org>

	[make "./configure ---enable-gnome=yes" work again]
	* app/interface.h : was including too much e.g. itself and gnome.h. 
	The latter gave compiling errors for --enable-gnome=yes
	* app/interface.c app/commands.c app/recent_files.c app/display.c
	  app/app_procs.c app/disp_callbacks.c : updated accordingly, basically
	adding #undef GTK_DISABLE_DEPRECATED before inclusing gnome.h but also
	adjusting include order (gnome before gtk) to make it have an effect

	[make "make distcheck" work again]
	* objects/FS/flow-poly.c : obsolete, finally removed
	* po/POTFILES.in : added app/create_object.c
	* po/POTFILES.skip : added some *.py to stop complains
	* configure.in : default is no doc creation ...
	* hardcopies.make : ... and thus not touching read-only directories.
	Lowers the priority of bug #567385

	* lib/dia_svg.c(read_text_svg) : support for text alignment, less 
	warnings and text colors corrected even for DIA_SVG_COLOUR_NONE
	(read_items) : switched from if-continue to a more common if-else-if
	* plug-ins/svg/svg-import.c : use DIA_SVG_COLOUR_NONE instead of (-1)

	* plug-ins/svg/svg-import.c(read_text_svg) : the text style was not
	properly intialize leading e.g. to random text colors.
	Also it now supports multi-line text elements "<tspan/>". Both can
	be booked under bug #108502 - but that bug will never get fixed;)

	* plug-ins/render_svg.c(draw_text) : implementation supporting 
	multi-line text via <tspan/>

2009-01-10  Hans Breuer  <hans@breuer.org>

	* objects/standard/arc.c(arc_move_handle) : maintain a minimum 
	distance between the three arc handles. Two or even all three 