@@ -1,3 +1,14 @@
+<<<<<<< .mine
+2009-01-17  Hans Breuer  <hans@breuer.org>
+
+	* objects/UML/classicon.c objects/UML/implements.c 
+	  objects/UML/message.c objects/UML/node.c
+	  objects/AADL/aadlbox.c objects/Jackson/phenomenon.c
+	  objects/KAOS/metaandorrel.c : reverted part of revision 3958 
+	"same name, same type", nowadays I'm weighting forward-compatibility 
+	higher than following unwritten rules
+
+=======
 2009-01-14  Steffen Macke <sdteffen@sdteffen.de>
 
 	* installer/win32/dia.nsi: Some updates for GTK 2.14.7
@@ -8,6 +19,7 @@
 	* app/sheets_dialog_callbacks.c : don't leak a superfluous SheetObject
 	fixes bug #564677
 
+>>>>>>> .r4194
 2009-01-11  Hans Breuer  <hans@breuer.org>
 
 	[make "./configure ---enable-gnome=yes" work again]
